...
      return;
    }
    setPage(page + 1);
    fetchCourseClasses();
  };
  return (
    <View style={styles.container} testID="courseClassScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={courseClassList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
