...
      return;
    }
    setPage(page + 1);
    fetchCourses();
  };
  return (
    <View style={styles.container} testID="courseScreen">
      <FlatList
        contentContainerStyle={styles.listContent}
        data={courseList}
        renderItem={renderRow}
        keyExtractor={keyExtractor}
        initialNumToRender={oneScreensWorth}
...
